# socratic-shell

./: .gitignore  CLAUDE.md  README.md  book.toml  buddhist.md  capture-prompt.md  hazy-feeling.md  run-dialectic.sh  voice.md  yehuda1.md  yehuda2.md  yehuda3.md
.ongoing/: config-restructure.md  dialectic-pattern-testing.md  mcp-memory-tool.md  memory-bank-implementation.md
academy/: .claude_code_mcp_config.json  CLAUDE.md  README.md
ai-insights/: prompt.md
dialectic/: README.md  dialectic-authorization.py  dialectic.py  memory_test_harness.py  pyproject.toml
dialectic/fixtures/: claude_4_system_prompt.md  completion_hook_reminder.md
dialectic/scripts/: task-agent-context-discovery.md
dialectic/src/dialectic/: __init__.py  __main__.py  main.py  models.py  sampling.py  server.py
dialectic/test-runs/: CLAUDE.md  test-conversation.txt  test-conversation2.txt  test-conversation3.txt
dialectic/test-scripts/: listening-mode-detection.yaml  simple-test.yaml
dialectic/tests/memory-basic/: create-memory-test.yaml  natural-phrases-test.yaml  persistence-test.yaml  read-before-update-test.yaml  read-update-flow-test.yaml  situation-context-test.yaml
dialectic/tests/memory-basic/.memories/: cognitive-pressure-discovery-002.json  natural-phrases-decision-003.json  situation-rename-001.json
examples/: talking-out-github-issues.md
insights/: context-aware-behavioral-triggers.md  structure-vs-flexibility.md
journal-mcp-server/: README.md  main.py  pyproject.toml
journal-mcp-server/src/journal_server/: __init__.py  cli.py  search.py  server.py  storage.py  types.py
journal-mcp-server/tests/: test_integration.py  test_storage.py
journal-mcp-server/tests/fixtures/: test_journal.json
memory-bank/: pyproject.toml  test_memory_bank.py
memory-bank/src/memory_bank/: __main__.py  models.py  server.py
prompts/: README.md
prompts/project/: README.md  install.sh
prompts/user/: install.sh  main.md
references/: 2025-06-19-designing-memory-banks.md  cli-tool-prompting-patterns.md  human-memory-architectural-insights.md  research-on-py-and-pyte.md  research-on-term-emulation-in-other-langs.md
socratic-shell/: pyproject.toml
socratic-shell/src/socratic_shell/: __init__.py  models.py  server.py
src/: SUMMARY.md  collaborative-prompting.md  emotive.md  empathic.md  hippo.md  installation.md  introduction.md  project-prompts.md  retaining-context.md  user-prompt.md
src/ai-insights-comments/: README.md
src/dialectic/: README.md
src/hippo/: README.md  design-doc.md  example-dialog.md  experiment-dialog.md  prompts.md
src/insights/: README.md  autonomy-vs-guidance.md  cognitive-load-through-consolidation.md  detail-vs-brevity.md  dynamic-connection-networks.md  working-memory-realization.md
src/journal-mcp-server/: README.md  design-doc.md
src/journal-server/: README.md  implementation-plan.md
src/memory-bank/: README.md  current-state.md  design-foundation.md
src/official-memory-server/: README.md
src/prompts/project/: README.md  anthropic-memory.md  install.sh
src/prompts/user/: README.md  install.sh  main-buddhist.md  main-v1.md  main.md
src/references/: 2025-06-19-designing-memory-banks.md  README.md  ai-human-collaboration-nuggets-guide.md  claude-sonnet-4-system-prompt.md  discovery-spiral.md
src/rfcs/vscode-extension/: README.md  hooks.md  mcp-server.md  repo-coordination.md
src/tracking-task-status/: README.md
test/: package-lock.json  package.json  pyproject.toml  tsconfig.json
test/fixtures/: simple_system_prompt.md
test/src/: memory_test_harness.ts
work-tracking/: github-tracking-issues.md  ongoing-files.md
