[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0", 
    "mypy>=1.8.0",
    "ruff>=0.1.0",
]

[project]
name = "dialectic"
version = "0.1.0"
description = "MCP server for testing collaboration patterns through structured conversation scenarios"
authors = [
    {name = "Niko Matsakis", email = "niko@alum.mit.edu"},
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.11"


[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[tool.ruff]
target-version = "py311"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings  
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

[project.scripts]
dialectic = "dialectic.main:cli"