[project]
name = "dialectic"
version = "0.1.0"
description = "YAML-based test runner for prompt engineering validation"
requires-python = ">=3.10"
dependencies = [
    "claude-code>=0.0.1",
    "claude-code-sdk>=0.0.14",
    "pyyaml>=6.0",
    "typing_extensions>=4.5.0",
    "mcp",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
