[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memory-bank"
version = "0.1.0"
description = "MCP server for intelligent memory consolidation and retrieval"
authors = [
    {name = "Niko Matsakis", email = "niko@alum.mit.edu"},
]
dependencies = [
    "mcp",
    "pydantic",
    "nltk",
]
requires-python = ">=3.11"

[project.scripts]
memory-bank = "memory_bank.__main__:main_sync"

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff",
    "mypy",
]