[project]
name = "test-harness"
version = "0.1.0"
description = "Test harness for memory bank implementation using Claude Code SDK"
requires-python = ">=3.10"
dependencies = [
    "claude-code>=0.0.1",
    "claude-code-sdk>=0.0.14",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
